--- a/public/fontello.css
+++ b/public/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('fontello.eot?23737536');
-  src: url('fontello.eot?23737536#iefix') format('embedded-opentype'),
-       url('fontello.woff?23737536') format('woff'),
-       url('fontello.ttf?23737536') format('truetype'),
-       url('fontello.svg?23737536#fontello') format('svg');
+  src: url('/fontello.eot');
+  src: url('/fontello.eot') format('embedded-opentype'),
+       url('/fontello.woff') format('woff'),
+       url('/fontello.ttf') format('truetype'),
+       url('/fontello.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('fontello.svg?23737536#fontello') format('svg');
+    src: url('../font/fontello.svg?84638224#fontello') format('svg');
   }
 }
 */
@@ -49,19 +49,7 @@
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
-.icon-music:before { content: '\e80b'; } /* '' */
-.icon-mail:before { content: '\e809'; } /* '' */
-.icon-tag:before { content: '\e80c'; } /* '' */
-.icon-tags:before { content: '\e80d'; } /* '' */
-.icon-facebook:before { content: '\e802'; } /* '' */
-.icon-gplus-squared:before { content: '\e804'; } /* '' */
-.icon-gplus:before { content: '\e80e'; } /* '' */
-.icon-mail-alt:before { content: '\e80a'; } /* '' */
-.icon-github:before { content: '\e800'; } /* '' */
-.icon-bitbucket:before { content: '\e808'; } /* '' */
-.icon-skype:before { content: '\e803'; } /* '' */
-.icon-facebook-squared:before { content: '\e801'; } /* '' */
-.icon-linkedin-squared:before { content: '\e805'; } /* '' */
-.icon-spotify:before { content: '\e807'; } /* '' */
-.icon-headphones:before { content: '\e806'; } /* '' */
+.icon-th-list:before { content: '\e801'; } /* '' */
+.icon-book-open:before { content: '\e800'; } /* '' */
+.icon-laptop:before { content: '\e802'; } /* '' */
+.icon-calendar:before { content: '\e80f'; } /* '' */ 
