--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,16 +1,13 @@
-<% @posts.each do |post| %>
-	<%= erb :_post, locals: {post: post.last, abbrev: true} %>
-<% end %>
-
-<!-- <ul class="previous-posts">
-	<% @posts.drop(1).each_with_index do |post, idx| post = post.last %>
-	<li <%= 'class="bottom"' if idx >= @posts.length - (@posts.length.even? ? 2 : 3) %> >
-		<h3><a href="<%= post_slug_url post.slug %>"><%= post.title %></a></h3>
-		<span><%= post.created_at.strftime("%b %d, %Y") %></span>
-	</li>
-	<% if idx.odd? %>
-	<div style="clear:both;"></div>
+<div id="blog_internal">
+	<div class="header parallax">
+		<h1 class="header">Blog</h1>
+	</div>
+	<% @posts.each do |post| %>
+			<div class="content">
+	        <%= erb :_post, locals: {post: post.last, abbrev: true} %>
+			</div>
+			<div class="controls bottom">
+				<span><a class="btn read-more" href="<%= post_slug_url post.last.slug %>">Continue reading</a></span>
+			</div>
 	<% end %>
-	<% end %>
-	<div style="clear:both;"></div>
-</ul> -->
+</div>
