--- a/views/blog_post.erb
+++ b/views/blog_post.erb
@@ -1,1 +1,8 @@
-<%= erb :_post, locals: { post: @post } %>
+<div id="blog_internal">
+	<div class="header parallax">
+		<h1 class="header">Blog</h1>
+	</div>
+	<div class="content">
+		<%= erb :_post, locals: { post: @post } %>
+	</div>
+</div>
