--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
 				</div>
 				<div class="wrapper">
 					<div class="slidewrapper">
-						<div class="royalSlider rsMinW">
+						<div id="project-slider" class="royalSlider rsMinW">
 							<div class="rsContent">
 								<img class="rsImg" src="/project_res/fbanalytics-android/920.png"/>
 								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockRight">analyze your facebook chat data!</div>
@@ -198,6 +198,7 @@
 							<ul>
 								<li>jQuery</li>
 								<li>Sass</li>
+								<li>Fancybox</li>
 								<li>Sinatra</li>
 								<li>Icons by <a href="http://vervex.deviantart.com/art/Somacro-40-300DPI-Social-Media-Icons-267955425">vervex</a></li>
 								<li>Splash images from <a href="http://unsplash.com">unsplash</a></li>
