--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,13 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Stanley Cen</title>
+		<title>
+            <% if @title %>
+                    <%= @title %> &mdash; Stanley Cen
+            <% else %>
+                    Stanley Cen
+            <% end %>
+        </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<link rel="author" href="/humans.txt" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
@@ -10,11 +16,19 @@
 		<link href="/rs/royalslider.css" rel="stylesheet" type="text/css"/>
 		<link href="/fontello.css" rel="stylesheet" type="text/css"/>
 		<link href="/rs/skins/minimal-white/rs-minimal-white.css" rel="stylesheet" type="text/css"/>
+		<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-buttons.css" />
+        <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.css" />
+        <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.css" />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="/jquery.mobiledetect.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 		<script src="/rs/jquery.royalslider.min.js"></script>
+		<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-buttons.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-media.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.js"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
 		<script src="/main.js"></script>
 	</head>
 	<body>
@@ -36,9 +50,11 @@
 		<%= "<div style='height:52px'></div>" if @nav != 'home' %>
 		<%= yield %>
 		<footer>
+			<% if @nav == 'home' %>
 			<div class="scrollup">
 				<a href="#home"></a>
 			</div>
+			<% end %>
 			<div class="bar">
 				<div class="wrapper">
 					<span class="copyleft">
